# sj-trading

./: .gitattributes  .gitignore  PRD.md  README.md  demo_backtest_ui.py  pyproject.toml
data/: 2330_20240101_20260429.csv  2330_20260101_20260429.csv  2330_demo_1d.csv  TXFR1_20260401_20260409.csv
docs/: PRD.md  README.md  backtest.md  broker.md  market_data.md  schemas.md  strategy.md  ui.md
src/sj_trading/: __init__.py  backtest.py  backtest_engine.py  broker.py  broker_interface.py  market_data.py  schemas.py  strategy.py  ui.py
src/sj_trading/strategys/: __init__.py  base.py  ma_cross.py
