[project]
name = "sj-trading"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "wyizhi30", email = "wyizhi30@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "python-dotenv>=1.0.1",
    "shioaji>=1.2.5",
]

[project.scripts]
sj-trading = "sj_trading:main"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"
